# fatcat

./: CMakeLists.txt  build.bat
src/: fatcat.cpp
src/core/: FatSystem.cpp
